--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_subdirectory("Day01")
+add_subdirectory("Day02")
+target_include_directories(DAY_02_A PRIVATE "include")
+target_include_directories(DAY_02_B PRIVATE "include")
