--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -2,3 +2,4 @@ include_directories("include")
 add_subdirectory("Day01")
 add_subdirectory("Day02")
 add_subdirectory("Day03")
+add_subdirectory("Day04")
